[FIX] Adds vertical spacing to the bottom of the 'subtitle' within news/event detail.

--- a/src/assets/toolkit/styles/5-objects/_objects.typography.scss
+++ b/src/assets/toolkit/styles/5-objects/_objects.typography.scss
@@ -106,8 +106,10 @@ $subtitle-separator-character:  $character-middle-dot;
 
   // Subtitle
   .subtitle {
-    color:       $text-weaker-color;
-    line-height: $text-stacked-line-height;
+    display:       inline-block;
+    margin-bottom: $gap-content;
+    color:         $text-weaker-color;
+    line-height:   $text-stacked-line-height;
 
     // Secondary information of lower importance
     strong + span {
@@ -235,7 +237,6 @@ aside > .formatting {
   h3,
   h4 {
     color: $text-weaker-color;
-    margin-top: $gap-half;
     margin-bottom: $gap-third;
 
     &:not(:first-child) { margin-top: $gap-half; }
